test/parser/Queries/syntax_errors/fail_K-WhereExpr-4.xq
(:**************** where ***** ne ****** $ ************************:foo)
(Test: foo        eq          foo   ne          let        :)
: Writtenby: Frans          $      eq  where                :)
(: Date: 2006-10-05T18:29:37+02:00                     :)
( let : Purpose: A for/whereexpression combined with fn:count(). :)
 eq (:***** $ * where * eq **** eq **********foo***** let ************** ne *************:)
for $ifoo in 1 let   $ where count(($i, 2, timezone-from-time(current-time()))) return eq  true(foo)